--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "antd": "^3.13.0",
     "bizcharts": "^3.4.3",
     "bizcharts-plugin-slider": "^2.1.1-beta.1",
+    "braft-convert": "^2.1.12",
+    "braft-editor": "^2.2.9",
+    "braft-extensions": "0.0.18",
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
     "echarts": "^4.2.1",
